Updating text and fix height jump bug
Updating text in under construction component, and transitioning overall height on expander panel so that the page does not jump in size.

--- a/src/styles/shared/expander.scss
+++ b/src/styles/shared/expander.scss
@@ -5,6 +5,7 @@
     align-items: flex-start;
     flex-direction: column;
     position: relative;
+    transition: height 1s linear;
     &-trigger.btn {
         display: flex;
         align-items: center;
